--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <img src="KvEuBiI.png">
-            <h1>Your Name</h1>
+            <h1>Bernard</h1>
             <p>Web Developer | Designer | Tech Enthusiast</p>
         </header>
         <section id="bio">
